--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     color:#492118;
     scroll-behavior: smooth;
 
+
+}
+
+body{
+    overflow-x: hidden;
+
 }
 
 #top{
@@ -41,13 +47,14 @@ nav a{
     width: 2.3rem;
     height: 2.3rem;
     cursor:pointer;
+    display: flex;
+    flex-shrink: 1;
 
     position: relative;
     border-bottom-left-radius: 50px;
     display: none;
 
 }
-
 
 .hamburger img{
    
@@ -57,13 +64,11 @@ nav a{
    top: 10px;
 }
 
-
-
-
 .cancelIcon{
 
     height: 10px;
     margin-right: 2vw;
+    margin-top: 2vh;
     vertical-align: baseline;
     display: none;
 
@@ -223,41 +228,41 @@ footer p{
         position: sticky;
         top:0;
         margin-block: 0;
-        background-color:#f6f0ebc8;
+        background-color:#f0ebe76c;
   
     }
     .logo{
         height: 4.7vh;
     }
     .hamburger, .show{
-        display: block;
+        display: flex;
     }  
     .anchorTags, .hide{
         display: none;
     } 
     .activeMenues{
-        height: 210px;
-        width: 180px;
+        height: 210px; 
         background-color: #ffffffec;
         display: flex;
         flex-direction: column;
 
         justify-content: center;
         align-items: start;
+        flex-shrink: 1;
         gap: 2.3vh;
+
         position: sticky;
-        left: 100vw;
+        left: 80vw;
         margin-top: 12rem;
         padding-inline: 1.2rem;
-        padding-block: 0.5rem;
         z-index: -1;
 
-        transition: transform 2s ease;
+        transition: transform 1s ease;
 
     } 
 
     .move{
-        transform: translateX(-400px);
+        transform: translateX(90vw);
     }
     .heroSectionContainer{
         padding-top: 3vh;
@@ -271,9 +276,3 @@ footer p{
         font-size: 0.8rem;
     }
 }
-
-
-
-
-
-
